js/src/tests/test262/language/import/import-defer/errors/resolution-error/main_FIXTURE.js
import
defer
*
as
ns
from
"
.
/
resolution
-
error_FIXTURE
.
js
"
;
globalThis
.
evaluated
=
true
;
